--- a/Profile-verified.html
+++ b/Profile-verified.html
@@ -277,9 +277,9 @@
   <div class="section-label">Sexual Profile</div>
 
   <div class="field locked">
-    <label>Your Sexual Archetype</label>
-   <div id="archetypeName" style="font-weight: bold;"></div>
-  </div>
+  <label>Your Sexual Archetype</label>
+  <a id="archetypeLink" style="font-weight: bold; color: white; text-decoration: underline;" target="_blank">Mood Multiplier</a>
+</div>
 
   <div class="field">
     <label>Enjoys</label>
@@ -559,4 +559,12 @@ document.getElementById("archetypeName").innerHTML = archetypeHTML;
   function saveProfile() {
     alert("Profile saved! (This would be stored or sent via backend)");
   }
+  const archetype = "Mood Multiplier"; // Replace with dynamic value in production
+const archetypeSlug = archetype.toLowerCase().replace(/[^a-z0-9]+/g, "_").replace(/_+$/, "");
+const correctedSlug = archetype === "Claimed & Trained" ? "claimed_and_trained" :
+                      archetype === "The Punish Me" ? "punish_me" :
+                      archetype === "The Provoker" ? "provoker" : archetypeSlug;
+
+document.getElementById("archetypeLink").textContent = archetype;
+document.getElementById("archetypeLink").href = `/premium/erotic-blueprint_${correctedSlug}.html`;
 </script>
