--- a/Profile-verified.html
+++ b/Profile-verified.html
@@ -230,10 +230,10 @@
     <label class="photo-upload"><span class="plus">+</span><input type="file" accept="image/*" onchange="handlePhotoUpload(event, 5)"></label>
   </div>
 
-  <div class="field">
-    <label for="instagram">Link Instagram (optional)</label>
-    <input type="text" id="instagram" placeholder="@yourhandle" />
-  </div>
+<div class="field" style="max-width: 500px; margin: 0 auto;">
+  <label for="instagram">Link Instagram (optional)</label>
+  <input type="text" id="instagram" placeholder="@yourhandle" />
+</div>
 
   <div class="section-label">Basic Info</div>
     <div class="field">
