--- a/Profile-verified.html
+++ b/Profile-verified.html
@@ -236,10 +236,10 @@
 </div>
 
   <div class="section-label">Basic Info</div>
-    <div class="field">
-    <label for="legalName">Legal Name</label>
-    <input type="text" id="legalName" placeholder="First & Last Name" />
-  </div>
+  <div class="field" style="max-width: 500px; margin: 0 auto;">
+  <label for="legalName">Legal Name</label>
+  <input type="text" id="legalName" placeholder="First & Last Name" />
+</div>
 
   <div class="field">
     <label for="age">Age</label>
@@ -390,15 +390,15 @@
     </select>
   </div>
 
-  <div class="field">
-    <label for="job">Job Title</label>
-    <input type="text" id="job" placeholder="Enter job title" />
-  </div>
+<div class="field" style="max-width: 500px; margin: 0 auto;">
+  <label for="job">Job Title</label>
+  <input type="text" id="job" placeholder="Enter job title" />
+</div>
 
-  <div class="field">
-    <label for="education">Education</label>
-    <input type="text" id="education" placeholder="School name" />
-  </div>
+ <div class="field" style="max-width: 500px; margin: 0 auto;">
+  <label for="education">Education</label>
+  <input type="text" id="education" placeholder="School name" />
+</div>
 
   <div class="field">
     <label>Religion</label>
