--- a/Profile-verified.html
+++ b/Profile-verified.html
@@ -122,15 +122,17 @@
       font-weight: 600;
     }
 
-    .field input, .field select {
-      width: 100%;
-      padding: 10px;
-      border: none;
-      border-radius: 4px;
-      font-size: 1rem;
-      color: var(--white);
-      background-color: rgba(255,255,255,0.1);
-    }
+.field input, .field select {
+  max-width: 100%;
+  width: 100%;
+  box-sizing: border-box;
+  padding: 10px;
+  border: none;
+  border-radius: 4px;
+  font-size: 1rem;
+  color: var(--white);
+  background-color: rgba(255,255,255,0.1);
+}
 
     .field select {
       appearance: none;
