--- a/Profile-verified.html
+++ b/Profile-verified.html
@@ -203,7 +203,7 @@
     }
   </style>
 </head>
-<body class="blue"> <!-- class changes based on archetype: blue, green, or red -->
+<body id="profileBody">
 
   <div class="header-banner">
     <div>Verified Mode</div>
